--- a/code/.cccc/Admin.html
+++ b/code/.cccc/Admin.html
@@ -12,11 +12,11 @@ Detailed report on module Admin
 <TR>
 <TD>McCabe's Cyclomatic Number</TD><TD>MVG</TD><TD ALIGN=RIGHT>    84</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
 <TR>
-<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
+<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>    67</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
 <TR>
-<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>47.875</STRONG></TD><TD>&nbsp;</TD></TR>
+<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT> 5.716</TD><TD>&nbsp;</TD></TR>
 <TR>
-<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>10.500</STRONG></TD><TD>&nbsp;</TD></TR>
+<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT> 1.254</TD><TD>&nbsp;</TD></TR>
 <TR>
 <TD>Weighted Methods per Class ( &nbsp;weighting = unity&nbsp;)</TD><TD>WMC1</TD><TD ALIGN=RIGHT>    21</TD><TD>&nbsp;</TD></TR>
 <TR>
@@ -61,15 +61,15 @@ declaration &nbsp;
 <TR>
 <TD>Admin( &nbsp;vector &amp;, &nbsp;vector &amp;, &nbsp;vector &amp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Admin.cpp:        15">Admin.cpp:15</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Admin.cpp:        16">Admin.cpp:16</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Admin.h:        28">Admin.h:28</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     9</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     9</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>addEmployee( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Admin.cpp:       252">Admin.cpp:252</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Admin.cpp:       304">Admin.cpp:304</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Admin.h:        51">Admin.h:51</A></CODE><BR>
 <BR>
@@ -77,15 +77,15 @@ declaration &nbsp;
 <TR>
 <TD>addManager( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Admin.cpp:       280">Admin.cpp:280</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Admin.cpp:       332">Admin.cpp:332</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Admin.h:        53">Admin.h:53</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    22</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM> 7.333</EM></TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>    22</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>11.000</EM></TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>addTeacher( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Admin.cpp:       316">Admin.cpp:316</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Admin.cpp:       368">Admin.cpp:368</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Admin.h:        55">Admin.h:55</A></CODE><BR>
 <BR>
@@ -93,15 +93,15 @@ declaration &nbsp;
 <TR>
 <TD>control( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Admin.cpp:       161">Admin.cpp:161</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Admin.cpp:       200">Admin.cpp:200</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Admin.h:        32">Admin.h:32</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    48</EM></TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    15</EM></TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    48</EM></TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    15</EM></TD><TD ALIGN=RIGHT>    14</TD><TD ALIGN=RIGHT> 3.429</TD><TD ALIGN=RIGHT> 1.071</TD></TR>
 <TR>
 <TD>displayEmployees( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Admin.cpp:       213">Admin.cpp:213</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Admin.cpp:       265">Admin.cpp:265</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Admin.h:        45">Admin.h:45</A></CODE><BR>
 <BR>
@@ -109,7 +109,7 @@ declaration &nbsp;
 <TR>
 <TD>displayManagers( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Admin.cpp:       226">Admin.cpp:226</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Admin.cpp:       278">Admin.cpp:278</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Admin.h:        47">Admin.h:47</A></CODE><BR>
 <BR>
@@ -117,7 +117,7 @@ declaration &nbsp;
 <TR>
 <TD>displayTeachers( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Admin.cpp:       239">Admin.cpp:239</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Admin.cpp:       291">Admin.cpp:291</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Admin.h:        49">Admin.h:49</A></CODE><BR>
 <BR>
@@ -125,15 +125,15 @@ declaration &nbsp;
 <TR>
 <TD>emp_delete( &nbsp;int&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Admin.cpp:       373">Admin.cpp:373</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Admin.cpp:       425">Admin.cpp:425</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Admin.h:        63">Admin.h:63</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    18</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM> 6.000</EM></TD></TR>
+</TD><TD ALIGN=RIGHT>    18</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT> 3.000</TD></TR>
 <TR>
 <TD>getID( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Admin.cpp:        24">Admin.cpp:24</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Admin.cpp:        26">Admin.cpp:26</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Admin.h:        30">Admin.h:30</A></CODE><BR>
 <BR>
@@ -141,7 +141,7 @@ declaration &nbsp;
 <TR>
 <TD>getName( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Admin.cpp:        29">Admin.cpp:29</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Admin.cpp:        32">Admin.cpp:32</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Admin.h:        35">Admin.h:35</A></CODE><BR>
 <BR>
@@ -149,75 +149,75 @@ declaration &nbsp;
 <TR>
 <TD>man_delete( &nbsp;int&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Admin.cpp:       391">Admin.cpp:391</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Admin.cpp:       443">Admin.cpp:443</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Admin.h:        65">Admin.h:65</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    25</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>    25</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM> 8.333</EM></TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>printAddInterface( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Admin.cpp:        65">Admin.cpp:65</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Admin.cpp:        79">Admin.cpp:79</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Admin.h:        39">Admin.h:39</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    26</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT>    26</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT> 3.250</TD><TD ALIGN=RIGHT> 0.750</TD></TR>
 <TR>
 <TD>printDetailInterface( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Admin.cpp:       131">Admin.cpp:131</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Admin.cpp:       163">Admin.cpp:163</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Admin.h:        43">Admin.h:43</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    26</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT>    26</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT> 3.250</TD><TD ALIGN=RIGHT> 0.750</TD></TR>
 <TR>
 <TD>printInterface( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Admin.cpp:        34">Admin.cpp:34</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Admin.cpp:        39">Admin.cpp:39</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Admin.h:        37">Admin.h:37</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    29</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    12</EM></TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT>    29</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    12</EM></TD><TD ALIGN=RIGHT>    10</TD><TD ALIGN=RIGHT> 2.900</TD><TD ALIGN=RIGHT> 1.200</TD></TR>
 <TR>
 <TD>printRemoveInterface( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Admin.cpp:        94">Admin.cpp:94</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Admin.cpp:       115">Admin.cpp:115</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Admin.h:        41">Admin.h:41</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    35</EM></TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    12</EM></TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    35</EM></TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    12</EM></TD><TD ALIGN=RIGHT>    11</TD><TD ALIGN=RIGHT> 3.182</TD><TD ALIGN=RIGHT> 1.091</TD></TR>
 <TR>
 <TD>removeEmployee( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Admin.cpp:       338">Admin.cpp:338</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Admin.cpp:       390">Admin.cpp:390</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Admin.h:        57">Admin.h:57</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    12</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>    12</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>removeManager( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Admin.cpp:       362">Admin.cpp:362</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Admin.cpp:       414">Admin.cpp:414</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Admin.h:        61">Admin.h:61</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    11</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>    11</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>removeTeacher( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Admin.cpp:       350">Admin.cpp:350</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Admin.cpp:       402">Admin.cpp:402</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Admin.h:        59">Admin.h:59</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    11</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>    11</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>tea_delete( &nbsp;int&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Admin.cpp:       419">Admin.cpp:419</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Admin.cpp:       471">Admin.cpp:471</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Admin.h:        67">Admin.h:67</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    13</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>    13</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR><TD HEIGHT=12 COLSPAN=6></TD></TR>
 </TR></TABLE>
 <H2><A NAME="structdet">Relationships</A></H2>
@@ -240,11 +240,11 @@ has by value &nbsp;
 <BR>
 vector [V] <BR>
 pass by reference &nbsp;
-<CODE><A HREF="cccc_src.html#Admin.cpp:        15">Admin.cpp:15</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Admin.cpp:        16">Admin.cpp:16</A></CODE><BR>
 pass by reference &nbsp;
-<CODE><A HREF="cccc_src.html#Admin.cpp:        15">Admin.cpp:15</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Admin.cpp:        16">Admin.cpp:16</A></CODE><BR>
 pass by reference &nbsp;
-<CODE><A HREF="cccc_src.html#Admin.cpp:        15">Admin.cpp:15</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Admin.cpp:        16">Admin.cpp:16</A></CODE><BR>
 has by reference &nbsp;
 <CODE><A HREF="cccc_src.html#Admin.h:        20">Admin.h:20</A></CODE><BR>
 has by reference &nbsp;
