--- a/code/.cccc/Complaint.html
+++ b/code/.cccc/Complaint.html
@@ -8,19 +8,19 @@ Detailed report on module Complaint
 <TR>
 <TH BGCOLOR="AQUA" WIDTH=70%>Metric</TH><TH BGCOLOR="AQUA" WIDTH=10%>Tag</TH><TH BGCOLOR="AQUA" WIDTH=10%>Overall</TH><TH BGCOLOR="AQUA" WIDTH=10%>Per Function</TH></TR>
 <TR>
-<TD>Lines of Code</TD><TD>LOC</TD><TD ALIGN=RIGHT>   180</TD><TD ALIGN=RIGHT>******</TD></TR>
+<TD>Lines of Code</TD><TD>LOC</TD><TD ALIGN=RIGHT>   168</TD><TD ALIGN=RIGHT>******</TD></TR>
 <TR>
 <TD>McCabe's Cyclomatic Number</TD><TD>MVG</TD><TD ALIGN=RIGHT>    28</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
 <TR>
-<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>     9</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
+<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>    30</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
 <TR>
-<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>20.000</EM></TD><TD>&nbsp;</TD></TR>
+<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT> 5.600</TD><TD>&nbsp;</TD></TR>
 <TR>
-<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT> 3.111</TD><TD>&nbsp;</TD></TR>
+<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT> 0.933</TD><TD>&nbsp;</TD></TR>
 <TR>
-<TD>Weighted Methods per Class ( &nbsp;weighting = unity&nbsp;)</TD><TD>WMC1</TD><TD ALIGN=RIGHT>    16</TD><TD>&nbsp;</TD></TR>
+<TD>Weighted Methods per Class ( &nbsp;weighting = unity&nbsp;)</TD><TD>WMC1</TD><TD ALIGN=RIGHT>    14</TD><TD>&nbsp;</TD></TR>
 <TR>
-<TD>Weighted Methods per Class ( &nbsp;weighting = visible&nbsp;)</TD><TD>WMCv</TD><TD ALIGN=RIGHT>    13</TD><TD>&nbsp;</TD></TR>
+<TD>Weighted Methods per Class ( &nbsp;weighting = visible&nbsp;)</TD><TD>WMCv</TD><TD ALIGN=RIGHT>    11</TD><TD>&nbsp;</TD></TR>
 <TR>
 <TD>Depth of Inheritance Tree</TD><TD>DIT</TD><TD ALIGN=RIGHT>     0</TD><TD>&nbsp;</TD></TR>
 <TR>
@@ -63,31 +63,31 @@ Detailed report on module Complaint
 <TD WIDTH=50%>Function prototype</TD><TH BGCOLOR="AQUA" WIDTH=10%>LOC</TH><TH BGCOLOR="AQUA" WIDTH=10%>MVG</TH><TH BGCOLOR="AQUA" WIDTH=10%>COM</TH><TH BGCOLOR="AQUA" WIDTH=10%>L_C</TH><TH BGCOLOR="AQUA" WIDTH=10%>M_C</TH><TR>
 <TD>Complaint( &nbsp;int, &nbsp;string, &nbsp;int, &nbsp;int, &nbsp;int, &nbsp;int, &nbsp;int, &nbsp;int, &nbsp;int, &nbsp;int&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.cpp:         6">Complaint.cpp:6</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.cpp:         8">Complaint.cpp:8</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Complaint.h:        26">Complaint.h:26</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    27</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT>    27</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT> 3.857</TD><TD ALIGN=RIGHT> 0.857</TD></TR>
 <TR>
 <TD>Complaint( &nbsp;string, &nbsp;int, &nbsp;int&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.cpp:        33">Complaint.cpp:33</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.cpp:        41">Complaint.cpp:41</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Complaint.h:        27">Complaint.h:27</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    11</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>    11</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>displayState( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.cpp:        60">Complaint.cpp:60</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.cpp:        68">Complaint.cpp:68</A></CODE><BR>
 declaration &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.h:        45">Complaint.h:45</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.h:        41">Complaint.h:41</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    18</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>******</TD></TR>
+</TD><TD ALIGN=RIGHT>    18</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT> 5.000</TD></TR>
 <TR>
 <TD>getDate( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.cpp:        58">Complaint.cpp:58</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.cpp:        65">Complaint.cpp:65</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Complaint.h:        33">Complaint.h:33</A></CODE><BR>
 <BR>
@@ -95,15 +95,15 @@ declaration &nbsp;
 <TR>
 <TD>getID( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.cpp:        44">Complaint.cpp:44</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.cpp:        53">Complaint.cpp:53</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Complaint.h:        29">Complaint.h:29</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>getState( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.cpp:        46">Complaint.cpp:46</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.cpp:        55">Complaint.cpp:55</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Complaint.h:        31">Complaint.h:31</A></CODE><BR>
 <BR>
@@ -111,83 +111,67 @@ declaration &nbsp;
 <TR>
 <TD>getUniqueID( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.cpp:        92">Complaint.cpp:92</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.cpp:       100">Complaint.cpp:100</A></CODE><BR>
 declaration &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.h:        51">Complaint.h:51</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.h:        47">Complaint.h:47</A></CODE><BR>
 <BR>
 </TD><TD ALIGN=RIGHT>    14</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
-<TD>notifyManager( &nbsp;&nbsp;)<BR>
+<TD>notifyTeacher( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.cpp:        48">Complaint.cpp:48</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.cpp:        57">Complaint.cpp:57</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Complaint.h:        37">Complaint.h:37</A></CODE><BR>
 <BR>
 </TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
-<TD>notifyTeacher( &nbsp;&nbsp;)<BR>
-definition &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.cpp:        50">Complaint.cpp:50</A></CODE><BR>
-declaration &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.h:        39">Complaint.h:39</A></CODE><BR>
-<BR>
-</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
-<TR>
 <TD>printDetail( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.cpp:        78">Complaint.cpp:78</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.cpp:        86">Complaint.cpp:86</A></CODE><BR>
 declaration &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.h:        47">Complaint.h:47</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.h:        43">Complaint.h:43</A></CODE><BR>
 <BR>
 </TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>printFullDetail( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.cpp:        84">Complaint.cpp:84</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.cpp:        92">Complaint.cpp:92</A></CODE><BR>
 declaration &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.h:        49">Complaint.h:49</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.h:        45">Complaint.h:45</A></CODE><BR>
 <BR>
 </TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
-<TD>setNotifyMan( &nbsp;bool&nbsp;)<BR>
-definition &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.cpp:       109">Complaint.cpp:109</A></CODE><BR>
-declaration &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.h:        41">Complaint.h:41</A></CODE><BR>
-<BR>
-</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
-<TR>
 <TD>setNotifyTea( &nbsp;bool&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.cpp:       111">Complaint.cpp:111</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.cpp:       117">Complaint.cpp:117</A></CODE><BR>
 declaration &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.h:        43">Complaint.h:43</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.h:        39">Complaint.h:39</A></CODE><BR>
 <BR>
 </TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>setState( &nbsp;State&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.cpp:        52">Complaint.cpp:52</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.cpp:        59">Complaint.cpp:59</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Complaint.h:        35">Complaint.h:35</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>updateFile( &nbsp;State, &nbsp;bool, &nbsp;bool&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.cpp:       137">Complaint.cpp:137</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.cpp:       145">Complaint.cpp:145</A></CODE><BR>
 declaration &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.h:        53">Complaint.h:53</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.h:        49">Complaint.h:49</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    36</EM></TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT> 6.000</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>    28</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>    15</TD><TD ALIGN=RIGHT> 1.867</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>writeToFile( &nbsp;int, &nbsp;int&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.cpp:       113">Complaint.cpp:113</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.cpp:       120">Complaint.cpp:120</A></CODE><BR>
 declaration &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.h:        52">Complaint.h:52</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.h:        48">Complaint.h:48</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    24</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT>    24</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>24.000</EM></TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM> 6.000</EM></TD></TR>
 <TR><TD HEIGHT=12 COLSPAN=6></TD></TR>
 </TR></TABLE>
 <H2><A NAME="structdet">Relationships</A></H2>
@@ -224,15 +208,15 @@ has by reference &nbsp;
 <BR>
 State [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.cpp:        52">Complaint.cpp:52</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.cpp:        59">Complaint.cpp:59</A></CODE><BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.cpp:       137">Complaint.cpp:137</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.cpp:       145">Complaint.cpp:145</A></CODE><BR>
 has by value &nbsp;
 <CODE><A HREF="cccc_src.html#Complaint.h:        22">Complaint.h:22</A></CODE><BR>
 pass by value &nbsp;
 <CODE><A HREF="cccc_src.html#Complaint.h:        35">Complaint.h:35</A></CODE><BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.h:        53">Complaint.h:53</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.h:        49">Complaint.h:49</A></CODE><BR>
 <BR>
 <BR>
 Teacher <BR>
@@ -242,32 +226,28 @@ has by reference &nbsp;
 <BR>
 bool [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.cpp:       109">Complaint.cpp:109</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.cpp:       117">Complaint.cpp:117</A></CODE><BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.cpp:       111">Complaint.cpp:111</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.cpp:       145">Complaint.cpp:145</A></CODE><BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.cpp:       137">Complaint.cpp:137</A></CODE><BR>
-pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.cpp:       137">Complaint.cpp:137</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.cpp:       145">Complaint.cpp:145</A></CODE><BR>
 has by value &nbsp;
 <CODE><A HREF="cccc_src.html#Complaint.h:        23">Complaint.h:23</A></CODE><BR>
 has by value &nbsp;
 <CODE><A HREF="cccc_src.html#Complaint.h:        24">Complaint.h:24</A></CODE><BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.h:        41">Complaint.h:41</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.h:        39">Complaint.h:39</A></CODE><BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.h:        43">Complaint.h:43</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.h:        49">Complaint.h:49</A></CODE><BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.h:        53">Complaint.h:53</A></CODE><BR>
-pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.h:        53">Complaint.h:53</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.h:        49">Complaint.h:49</A></CODE><BR>
 <BR>
 <BR>
 string [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.cpp:         6">Complaint.cpp:6</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.cpp:         8">Complaint.cpp:8</A></CODE><BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#Complaint.cpp:        33">Complaint.cpp:33</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Complaint.cpp:        41">Complaint.cpp:41</A></CODE><BR>
 has by value &nbsp;
 <CODE><A HREF="cccc_src.html#Complaint.h:        18">Complaint.h:18</A></CODE><BR>
 pass by value &nbsp;
