--- a/code/.cccc/Employee.html
+++ b/code/.cccc/Employee.html
@@ -8,15 +8,15 @@ Detailed report on module Employee
 <TR>
 <TH BGCOLOR="AQUA" WIDTH=70%>Metric</TH><TH BGCOLOR="AQUA" WIDTH=10%>Tag</TH><TH BGCOLOR="AQUA" WIDTH=10%>Overall</TH><TH BGCOLOR="AQUA" WIDTH=10%>Per Function</TH></TR>
 <TR>
-<TD>Lines of Code</TD><TD>LOC</TD><TD ALIGN=RIGHT>   231</TD><TD ALIGN=RIGHT>******</TD></TR>
+<TD>Lines of Code</TD><TD>LOC</TD><TD ALIGN=RIGHT>   232</TD><TD ALIGN=RIGHT>******</TD></TR>
 <TR>
-<TD>McCabe's Cyclomatic Number</TD><TD>MVG</TD><TD ALIGN=RIGHT>    36</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+<TD>McCabe's Cyclomatic Number</TD><TD>MVG</TD><TD ALIGN=RIGHT>    37</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
 <TR>
-<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>    10</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
+<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>    54</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
 <TR>
-<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>23.100</EM></TD><TD>&nbsp;</TD></TR>
+<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT> 4.296</TD><TD>&nbsp;</TD></TR>
 <TR>
-<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT> 3.600</TD><TD>&nbsp;</TD></TR>
+<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT> 0.685</TD><TD>&nbsp;</TD></TR>
 <TR>
 <TD>Weighted Methods per Class ( &nbsp;weighting = unity&nbsp;)</TD><TD>WMC1</TD><TD ALIGN=RIGHT>    17</TD><TD>&nbsp;</TD></TR>
 <TR>
@@ -26,11 +26,11 @@ Detailed report on module Employee
 <TR>
 <TD>Number of Children</TD><TD>NOC</TD><TD ALIGN=RIGHT>     0</TD><TD>&nbsp;</TD></TR>
 <TR>
-<TD>Coupling between objects</TD><TD>CBO</TD><TD ALIGN=RIGHT>     9</TD><TD>&nbsp;</TD></TR>
+<TD>Coupling between objects</TD><TD>CBO</TD><TD ALIGN=RIGHT>    10</TD><TD>&nbsp;</TD></TR>
 <TR>
-<TD>Information Flow measure ( &nbsp;inclusive&nbsp;)</TD><TD>IF4</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>   196</EM></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
+<TD>Information Flow measure ( &nbsp;inclusive&nbsp;)</TD><TD>IF4</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>   441</EM></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
 <TR>
-<TD>Information Flow measure ( &nbsp;visible&nbsp;)</TD><TD>IF4v</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>   196</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
+<TD>Information Flow measure ( &nbsp;visible&nbsp;)</TD><TD>IF4v</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>   441</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
 <TR>
 <TD>Information Flow measure ( &nbsp;concrete&nbsp;)</TD><TD>IF4c</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>********</TD></TR>
 </TABLE>
@@ -68,47 +68,47 @@ Detailed report on module Employee
 <TD WIDTH=50%>Function prototype</TD><TH BGCOLOR="AQUA" WIDTH=10%>LOC</TH><TH BGCOLOR="AQUA" WIDTH=10%>MVG</TH><TH BGCOLOR="AQUA" WIDTH=10%>COM</TH><TH BGCOLOR="AQUA" WIDTH=10%>L_C</TH><TH BGCOLOR="AQUA" WIDTH=10%>M_C</TH><TR>
 <TD>Employee( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Employee.cpp:         6">Employee.cpp:6</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Employee.cpp:         7">Employee.cpp:7</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Employee.h:        52">Employee.h:52</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>Employee( &nbsp;int, &nbsp;string, &nbsp;bool&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Employee.cpp:        13">Employee.cpp:13</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Employee.cpp:        15">Employee.cpp:15</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Employee.h:        23">Employee.h:23</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>addDept( &nbsp;Department *&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Employee.cpp:        20">Employee.cpp:20</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Employee.cpp:        23">Employee.cpp:23</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Employee.h:        31">Employee.h:31</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>addJob( &nbsp;Job *&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Employee.cpp:        28">Employee.cpp:28</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Employee.cpp:        34">Employee.cpp:34</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Employee.h:        33">Employee.h:33</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>control( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Employee.cpp:        35">Employee.cpp:35</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Employee.cpp:        43">Employee.cpp:43</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Employee.h:        35">Employee.h:35</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    30</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT>    30</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>    11</TD><TD ALIGN=RIGHT> 2.727</TD><TD ALIGN=RIGHT> 0.636</TD></TR>
 <TR>
 <TD>getID( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Employee.cpp:       151">Employee.cpp:151</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Employee.cpp:       180">Employee.cpp:180</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Employee.h:        25">Employee.h:25</A></CODE><BR>
 <BR>
@@ -116,7 +116,7 @@ declaration &nbsp;
 <TR>
 <TD>getName( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Employee.cpp:       155">Employee.cpp:155</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Employee.cpp:       184">Employee.cpp:184</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Employee.h:        27">Employee.h:27</A></CODE><BR>
 <BR>
@@ -124,7 +124,7 @@ declaration &nbsp;
 <TR>
 <TD>getUniqueID( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Employee.cpp:       169">Employee.cpp:169</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Employee.cpp:       198">Employee.cpp:198</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Employee.h:        45">Employee.h:45</A></CODE><BR>
 <BR>
@@ -132,7 +132,7 @@ declaration &nbsp;
 <TR>
 <TD>isAvailable( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Employee.cpp:       159">Employee.cpp:159</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Employee.cpp:       188">Employee.cpp:188</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Employee.h:        37">Employee.h:37</A></CODE><BR>
 <BR>
@@ -140,7 +140,7 @@ declaration &nbsp;
 <TR>
 <TD>markAsUnallocated( &nbsp;int&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Employee.cpp:       187">Employee.cpp:187</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Employee.cpp:       216">Employee.cpp:216</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Employee.h:        43">Employee.h:43</A></CODE><BR>
 <BR>
@@ -148,7 +148,7 @@ declaration &nbsp;
 <TR>
 <TD>printDetail( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Employee.cpp:        99">Employee.cpp:99</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Employee.cpp:       125">Employee.cpp:125</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Employee.h:        39">Employee.h:39</A></CODE><BR>
 <BR>
@@ -156,15 +156,15 @@ declaration &nbsp;
 <TR>
 <TD>printInterface( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Employee.cpp:        69">Employee.cpp:69</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Employee.cpp:        88">Employee.cpp:88</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Employee.h:        50">Employee.h:50</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    28</TD><TD ALIGN=RIGHT>     9</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT>    28</TD><TD ALIGN=RIGHT>     9</TD><TD ALIGN=RIGHT>    10</TD><TD ALIGN=RIGHT> 2.800</TD><TD ALIGN=RIGHT> 0.900</TD></TR>
 <TR>
 <TD>setAvailable( &nbsp;bool&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Employee.cpp:       143">Employee.cpp:143</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Employee.cpp:       169">Employee.cpp:169</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Employee.h:        29">Employee.h:29</A></CODE><BR>
 <BR>
@@ -172,15 +172,15 @@ declaration &nbsp;
 <TR>
 <TD>updateFile( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Employee.cpp:       217">Employee.cpp:217</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Employee.cpp:       246">Employee.cpp:246</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Employee.h:        49">Employee.h:49</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    27</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>27.000</EM></TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>    26</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     9</TD><TD ALIGN=RIGHT> 2.889</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>updateSystem( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Employee.cpp:       104">Employee.cpp:104</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Employee.cpp:       130">Employee.cpp:130</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Employee.h:        51">Employee.h:51</A></CODE><BR>
 <BR>
@@ -188,7 +188,7 @@ declaration &nbsp;
 <TR>
 <TD>writeToFile( &nbsp;const Employee &amp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Employee.cpp:       161">Employee.cpp:161</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Employee.cpp:       190">Employee.cpp:190</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Employee.h:        41">Employee.h:41</A></CODE><BR>
 <BR>
@@ -196,11 +196,11 @@ declaration &nbsp;
 <TR>
 <TD>~Employee( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Employee.cpp:       145">Employee.cpp:145</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Employee.cpp:       172">Employee.cpp:172</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Employee.h:        47">Employee.h:47</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR><TD HEIGHT=12 COLSPAN=6></TD></TR>
 </TR></TABLE>
 <H2><A NAME="structdet">Relationships</A></H2>
@@ -210,13 +210,20 @@ declaration &nbsp;
 <TD WIDTH=50%>
 Department [V] <BR>
 pass by reference &nbsp;
-<CODE><A HREF="cccc_src.html#Department.cpp:        47">Department.cpp:47</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Department.cpp:        48">Department.cpp:48</A></CODE><BR>
 pass by reference &nbsp;
-<CODE><A HREF="cccc_src.html#Department.cpp:        63">Department.cpp:63</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Department.cpp:        65">Department.cpp:65</A></CODE><BR>
 pass by reference &nbsp;
 <CODE><A HREF="cccc_src.html#Department.h:        62">Department.h:62</A></CODE><BR>
 pass by reference &nbsp;
 <CODE><A HREF="cccc_src.html#Department.h:        66">Department.h:66</A></CODE><BR>
+<BR>
+<BR>
+Job [V] <BR>
+pass by reference &nbsp;
+<CODE><A HREF="cccc_src.html#Job.cpp:        77">Job.cpp:77</A></CODE><BR>
+pass by reference &nbsp;
+<CODE><A HREF="cccc_src.html#Job.h:        40">Job.h:40</A></CODE><BR>
 <BR>
 <BR>
 WorksIn [V] <BR>
@@ -229,14 +236,14 @@ pass by reference &nbsp;
 <TD WIDTH=50%>
 Department [V] <BR>
 pass by reference &nbsp;
-<CODE><A HREF="cccc_src.html#Employee.cpp:        20">Employee.cpp:20</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Employee.cpp:        23">Employee.cpp:23</A></CODE><BR>
 pass by reference &nbsp;
 <CODE><A HREF="cccc_src.html#Employee.h:        31">Employee.h:31</A></CODE><BR>
 <BR>
 <BR>
 Job [V] <BR>
 pass by reference &nbsp;
-<CODE><A HREF="cccc_src.html#Employee.cpp:        28">Employee.cpp:28</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Employee.cpp:        34">Employee.cpp:34</A></CODE><BR>
 pass by reference &nbsp;
 <CODE><A HREF="cccc_src.html#Employee.h:        33">Employee.h:33</A></CODE><BR>
 <BR>
@@ -253,9 +260,9 @@ has by reference &nbsp;
 <BR>
 bool [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#Employee.cpp:        13">Employee.cpp:13</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Employee.cpp:        15">Employee.cpp:15</A></CODE><BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#Employee.cpp:       143">Employee.cpp:143</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Employee.cpp:       169">Employee.cpp:169</A></CODE><BR>
 has by value &nbsp;
 <CODE><A HREF="cccc_src.html#Employee.h:        20">Employee.h:20</A></CODE><BR>
 pass by value &nbsp;
@@ -266,7 +273,7 @@ pass by value &nbsp;
 <BR>
 string [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#Employee.cpp:        13">Employee.cpp:13</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Employee.cpp:        15">Employee.cpp:15</A></CODE><BR>
 has by value &nbsp;
 <CODE><A HREF="cccc_src.html#Employee.h:        16">Employee.h:16</A></CODE><BR>
 pass by value &nbsp;
