--- a/code/.cccc/anonymous.html
+++ b/code/.cccc/anonymous.html
@@ -12,11 +12,11 @@ Detailed report on module anonymous
 <TR>
 <TD>McCabe's Cyclomatic Number</TD><TD>MVG</TD><TD ALIGN=RIGHT>    43</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
 <TR>
-<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
+<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>    47</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
 <TR>
-<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>55.333</STRONG></TD><TD>&nbsp;</TD></TR>
+<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT> 3.532</TD><TD>&nbsp;</TD></TR>
 <TR>
-<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>14.333</STRONG></TD><TD>&nbsp;</TD></TR>
+<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT> 0.915</TD><TD>&nbsp;</TD></TR>
 <TR>
 <TD>Weighted Methods per Class ( &nbsp;weighting = unity&nbsp;)</TD><TD>WMC1</TD><TD ALIGN=RIGHT>     9</TD><TD>&nbsp;</TD></TR>
 <TR>
@@ -48,7 +48,7 @@ declaration &nbsp;
 definition &nbsp;
 <CODE><A HREF="cccc_src.html#main.cpp:        27">main.cpp:27</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>   110</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    29</EM></TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>   110</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    29</EM></TD><TD ALIGN=RIGHT>    38</TD><TD ALIGN=RIGHT> 2.895</TD><TD ALIGN=RIGHT> 0.763</TD></TR>
 <TR>
 <TD>init( &nbsp;string, &nbsp;string, &nbsp;string, &nbsp;string, &nbsp;string, &nbsp;string&nbsp;)<BR>
 declaration &nbsp;
@@ -70,11 +70,11 @@ declaration &nbsp;
 <TR>
 <TD>populateDepartment( &nbsp;string&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Global.cpp:        22">Global.cpp:22</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Global.cpp:        23">Global.cpp:23</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Global.h:        31">Global.h:31</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    16</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>    16</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>populateEmployee( &nbsp;string&nbsp;)<BR>
 declaration &nbsp;
