--- a/code/.cccc/Department.html
+++ b/code/.cccc/Department.html
@@ -8,15 +8,15 @@ Detailed report on module Department
 <TR>
 <TH BGCOLOR="AQUA" WIDTH=70%>Metric</TH><TH BGCOLOR="AQUA" WIDTH=10%>Tag</TH><TH BGCOLOR="AQUA" WIDTH=10%>Overall</TH><TH BGCOLOR="AQUA" WIDTH=10%>Per Function</TH></TR>
 <TR>
-<TD>Lines of Code</TD><TD>LOC</TD><TD ALIGN=RIGHT>   178</TD><TD ALIGN=RIGHT>******</TD></TR>
+<TD>Lines of Code</TD><TD>LOC</TD><TD ALIGN=RIGHT>   166</TD><TD ALIGN=RIGHT>******</TD></TR>
 <TR>
 <TD>McCabe's Cyclomatic Number</TD><TD>MVG</TD><TD ALIGN=RIGHT>    44</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
 <TR>
-<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>********</TD></TR>
+<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>    27</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
 <TR>
-<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD>&nbsp;</TD></TR>
+<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT> 6.148</TD><TD>&nbsp;</TD></TR>
 <TR>
-<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD>&nbsp;</TD></TR>
+<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT> 1.630</TD><TD>&nbsp;</TD></TR>
 <TR>
 <TD>Weighted Methods per Class ( &nbsp;weighting = unity&nbsp;)</TD><TD>WMC1</TD><TD ALIGN=RIGHT>    17</TD><TD>&nbsp;</TD></TR>
 <TR>
@@ -68,11 +68,11 @@ Detailed report on module Department
 <TD WIDTH=50%>Function prototype</TD><TH BGCOLOR="AQUA" WIDTH=10%>LOC</TH><TH BGCOLOR="AQUA" WIDTH=10%>MVG</TH><TH BGCOLOR="AQUA" WIDTH=10%>COM</TH><TH BGCOLOR="AQUA" WIDTH=10%>L_C</TH><TH BGCOLOR="AQUA" WIDTH=10%>M_C</TH><TR>
 <TD>Department( &nbsp;int, &nbsp;string, &nbsp;Manager *, &nbsp;vector&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Department.cpp:         9">Department.cpp:9</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Department.cpp:        10">Department.cpp:10</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Department.h:        52">Department.h:52</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    13</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>    12</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>NewComplaint( &nbsp;&nbsp;)<BR>
 definition &nbsp;
@@ -80,7 +80,7 @@ definition &nbsp;
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Department.h:        72">Department.h:72</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    15</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>******</TD></TR>
+</TD><TD ALIGN=RIGHT>    15</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT> 5.000</TD></TR>
 <TR>
 <TD>addComplaint( &nbsp;Complaint *&nbsp;)<BR>
 definition &nbsp;
@@ -88,79 +88,79 @@ definition &nbsp;
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Department.h:        70">Department.h:70</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>addEmployee( &nbsp;Employee *&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Department.cpp:        47">Department.cpp:47</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Department.cpp:        48">Department.cpp:48</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Department.h:        62">Department.h:62</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>changeManager( &nbsp;Manager *&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Department.cpp:        53">Department.cpp:53</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Department.cpp:        54">Department.cpp:54</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Department.h:        64">Department.h:64</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     9</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>getID( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Department.cpp:        22">Department.cpp:22</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Department.cpp:        23">Department.cpp:23</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Department.h:        54">Department.h:54</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>getName( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Department.cpp:        27">Department.cpp:27</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Department.cpp:        28">Department.cpp:28</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Department.h:        56">Department.h:56</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>inDeptAndAval( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Department.cpp:       127">Department.cpp:127</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Department.cpp:       130">Department.cpp:130</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Department.h:        78">Department.h:78</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>pendingComplaint( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Department.cpp:       107">Department.cpp:107</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Department.cpp:       108">Department.cpp:108</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Department.h:        74">Department.h:74</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    10</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>******</TD></TR>
+</TD><TD ALIGN=RIGHT>    10</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT> 5.000</TD></TR>
 <TR>
 <TD>printDetail( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Department.cpp:        39">Department.cpp:39</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Department.cpp:        40">Department.cpp:40</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Department.h:        60">Department.h:60</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>printEmployees( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Department.cpp:        32">Department.cpp:32</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Department.cpp:        33">Department.cpp:33</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Department.h:        58">Department.h:58</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>removeEmployee( &nbsp;Employee *&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Department.cpp:        63">Department.cpp:63</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Department.cpp:        65">Department.cpp:65</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Department.h:        66">Department.h:66</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    15</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>    12</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>removeManager( &nbsp;Manager *&nbsp;)<BR>
 definition &nbsp;
@@ -168,39 +168,39 @@ definition &nbsp;
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Department.h:        68">Department.h:68</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     9</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>setCompState( &nbsp;int, &nbsp;int&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Department.cpp:       136">Department.cpp:136</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Department.cpp:       139">Department.cpp:139</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Department.h:        80">Department.h:80</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    12</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT>    12</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM> 6.000</EM></TD></TR>
 <TR>
 <TD>summary( &nbsp;Date, &nbsp;Date&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Department.cpp:       148">Department.cpp:148</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Department.cpp:       152">Department.cpp:152</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Department.h:        82">Department.h:82</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    14</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT>    14</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM> 7.000</EM></TD></TR>
 <TR>
 <TD>updateDept_file( &nbsp;int, &nbsp;int, &nbsp;int, &nbsp;int&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Department.cpp:       162">Department.cpp:162</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Department.cpp:       167">Department.cpp:167</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Department.h:        84">Department.h:84</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    13</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>    13</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>viewComplaint( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Department.cpp:       117">Department.cpp:117</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Department.cpp:       119">Department.cpp:119</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Department.h:        76">Department.h:76</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    10</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>    10</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR><TD HEIGHT=12 COLSPAN=6></TD></TR>
 </TR></TABLE>
 <H2><A NAME="structdet">Relationships</A></H2>
@@ -215,7 +215,7 @@ has by reference &nbsp;
 <BR>
 Employee [V] <BR>
 pass by reference &nbsp;
-<CODE><A HREF="cccc_src.html#Employee.cpp:        20">Employee.cpp:20</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Employee.cpp:        23">Employee.cpp:23</A></CODE><BR>
 pass by reference &nbsp;
 <CODE><A HREF="cccc_src.html#Employee.h:        31">Employee.h:31</A></CODE><BR>
 <BR>
@@ -224,7 +224,7 @@ Manager [V] <BR>
 pass by reference &nbsp;
 <CODE><A HREF="cccc_src.html#Manager.cpp:        22">Manager.cpp:22</A></CODE><BR>
 pass by reference &nbsp;
-<CODE><A HREF="cccc_src.html#Manager.h:        27">Manager.h:27</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Manager.h:        25">Manager.h:25</A></CODE><BR>
 <BR>
 <BR>
 &nbsp;
@@ -239,9 +239,9 @@ pass by reference &nbsp;
 <BR>
 Date [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#Department.cpp:       148">Department.cpp:148</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Department.cpp:       152">Department.cpp:152</A></CODE><BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#Department.cpp:       148">Department.cpp:148</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Department.cpp:       152">Department.cpp:152</A></CODE><BR>
 pass by value &nbsp;
 <CODE><A HREF="cccc_src.html#Department.h:        82">Department.h:82</A></CODE><BR>
 pass by value &nbsp;
@@ -250,9 +250,9 @@ pass by value &nbsp;
 <BR>
 Employee [V] <BR>
 pass by reference &nbsp;
-<CODE><A HREF="cccc_src.html#Department.cpp:        47">Department.cpp:47</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Department.cpp:        48">Department.cpp:48</A></CODE><BR>
 pass by reference &nbsp;
-<CODE><A HREF="cccc_src.html#Department.cpp:        63">Department.cpp:63</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Department.cpp:        65">Department.cpp:65</A></CODE><BR>
 pass by reference &nbsp;
 <CODE><A HREF="cccc_src.html#Department.h:        62">Department.h:62</A></CODE><BR>
 pass by reference &nbsp;
@@ -261,9 +261,9 @@ pass by reference &nbsp;
 <BR>
 Manager [V] <BR>
 pass by reference &nbsp;
-<CODE><A HREF="cccc_src.html#Department.cpp:         9">Department.cpp:9</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Department.cpp:        10">Department.cpp:10</A></CODE><BR>
 pass by reference &nbsp;
-<CODE><A HREF="cccc_src.html#Department.cpp:        53">Department.cpp:53</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Department.cpp:        54">Department.cpp:54</A></CODE><BR>
 pass by reference &nbsp;
 <CODE><A HREF="cccc_src.html#Department.cpp:        78">Department.cpp:78</A></CODE><BR>
 has by reference &nbsp;
@@ -293,7 +293,7 @@ inheritance &nbsp;
 <BR>
 string [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#Department.cpp:         9">Department.cpp:9</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Department.cpp:        10">Department.cpp:10</A></CODE><BR>
 has by value &nbsp;
 <CODE><A HREF="cccc_src.html#Department.h:        46">Department.h:46</A></CODE><BR>
 pass by value &nbsp;
@@ -302,7 +302,7 @@ pass by value &nbsp;
 <BR>
 vector [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#Department.cpp:         9">Department.cpp:9</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Department.cpp:        10">Department.cpp:10</A></CODE><BR>
 has by value &nbsp;
 <CODE><A HREF="cccc_src.html#Department.h:        48">Department.h:48</A></CODE><BR>
 has by value &nbsp;
