--- a/code/.cccc/Director.html
+++ b/code/.cccc/Director.html
@@ -12,11 +12,11 @@ Detailed report on module Director
 <TR>
 <TD>McCabe's Cyclomatic Number</TD><TD>MVG</TD><TD ALIGN=RIGHT>    34</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
 <TR>
-<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>********</TD></TR>
+<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>    28</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
 <TR>
-<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD>&nbsp;</TD></TR>
+<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT> 5.214</TD><TD>&nbsp;</TD></TR>
 <TR>
-<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD>&nbsp;</TD></TR>
+<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT> 1.214</TD><TD>&nbsp;</TD></TR>
 <TR>
 <TD>Weighted Methods per Class ( &nbsp;weighting = unity&nbsp;)</TD><TD>WMC1</TD><TD ALIGN=RIGHT>     7</TD><TD>&nbsp;</TD></TR>
 <TR>
@@ -53,59 +53,59 @@ Detailed report on module Director
 <TD WIDTH=50%>Function prototype</TD><TH BGCOLOR="AQUA" WIDTH=10%>LOC</TH><TH BGCOLOR="AQUA" WIDTH=10%>MVG</TH><TH BGCOLOR="AQUA" WIDTH=10%>COM</TH><TH BGCOLOR="AQUA" WIDTH=10%>L_C</TH><TH BGCOLOR="AQUA" WIDTH=10%>M_C</TH><TR>
 <TD>Director( &nbsp;vector &amp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Director.cpp:         7">Director.cpp:7</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Director.cpp:         8">Director.cpp:8</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Director.h:        18">Director.h:18</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>complains_in_Dept( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Director.cpp:        49">Director.cpp:49</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Director.cpp:        54">Director.cpp:54</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Director.h:        26">Director.h:26</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    34</EM></TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    34</EM></TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT> 6.800</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>control( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Director.cpp:        25">Director.cpp:25</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Director.cpp:        29">Director.cpp:29</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Director.h:        22">Director.h:22</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    20</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>******</TD><TD ALIGN=RIGHT>******</TD></TR>
+</TD><TD ALIGN=RIGHT>    20</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>20.000</TD><TD ALIGN=RIGHT> 5.000</TD></TR>
 <TR>
 <TD>getID( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Director.cpp:        15">Director.cpp:15</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Director.cpp:        17">Director.cpp:17</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Director.h:        20">Director.h:20</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>getName( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Director.cpp:        20">Director.cpp:20</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Director.cpp:        23">Director.cpp:23</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Director.h:        24">Director.h:24</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>printInterface( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Director.cpp:       131">Director.cpp:131</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Director.cpp:       146">Director.cpp:146</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Director.h:        25">Director.h:25</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    23</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD ALIGN=RIGHT>******</TD></TR>
+</TD><TD ALIGN=RIGHT>    23</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>     9</TD><TD ALIGN=RIGHT> 2.556</TD><TD ALIGN=RIGHT> 0.556</TD></TR>
 <TR>
 <TD>viewComplaintSummary( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Director.cpp:        87">Director.cpp:87</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Director.cpp:        92">Director.cpp:92</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Director.h:        27">Director.h:27</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    43</EM></TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    17</EM></TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    43</EM></TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    17</EM></TD><TD ALIGN=RIGHT>    10</TD><TD ALIGN=RIGHT> 4.300</TD><TD ALIGN=RIGHT> 1.700</TD></TR>
 <TR><TD HEIGHT=12 COLSPAN=6></TD></TR>
 </TR></TABLE>
 <H2><A NAME="structdet">Relationships</A></H2>
@@ -128,7 +128,7 @@ has by value &nbsp;
 <BR>
 vector [CV] <BR>
 pass by reference &nbsp;
-<CODE><A HREF="cccc_src.html#Director.cpp:         7">Director.cpp:7</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Director.cpp:         8">Director.cpp:8</A></CODE><BR>
 has by value &nbsp;
 <CODE><A HREF="cccc_src.html#Director.h:        15">Director.h:15</A></CODE><BR>
 pass by reference &nbsp;
