--- a/code/.cccc/cccc.html
+++ b/code/.cccc/cccc.html
@@ -6,7 +6,7 @@ Report on software metrics
 <TABLE BORDER WIDTH=100%>
 <TR><TH COLSPAN=2>
 CCCC Software Metrics Report
-<BR> generated Thu Dec 07 12:01:56 2023
+<BR> generated Thu Dec 07 23:08:33 2023
 
 </TR>
 <TR>
@@ -66,19 +66,19 @@ Two variants on the information flow measure IF4 are also presented, one (IF4v) 
 <TR>
 <TD>Number of modules</TD><TD>NOM</TD><TD ALIGN=RIGHT>    18</TD><TD>&nbsp;</TD></TR>
 <TR>
-<TD WIDTH=700%>Lines of Code</TD><TD WIDTH=120%>LOC</TD><TD ALIGN=RIGHT>  2081</TD><TD ALIGN=RIGHT>115.611</TD></TR>
+<TD WIDTH=700%>Lines of Code</TD><TD WIDTH=120%>LOC</TD><TD ALIGN=RIGHT>  2087</TD><TD ALIGN=RIGHT>115.944</TD></TR>
 <TR>
-<TD>McCabe's Cyclomatic Number</TD><TD>MVG</TD><TD ALIGN=RIGHT>   424</TD><TD ALIGN=RIGHT>23.556</TD></TR>
+<TD>McCabe's Cyclomatic Number</TD><TD>MVG</TD><TD ALIGN=RIGHT>   433</TD><TD ALIGN=RIGHT>24.056</TD></TR>
 <TR>
-<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>    54</TD><TD ALIGN=RIGHT> 3.000</TD></TR>
+<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>   301</TD><TD ALIGN=RIGHT>16.722</TD></TR>
 <TR>
-<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>38.537</STRONG></TD><TD>&nbsp;</TD></TR>
+<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT> 6.934</TD><TD>&nbsp;</TD></TR>
 <TR>
-<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM> 7.852</EM></TD><TD>&nbsp;</TD></TR>
+<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT> 1.439</TD><TD>&nbsp;</TD></TR>
 <TR>
-<TD>Information Flow measure ( &nbsp;inclusive&nbsp;)</TD><TD>IF4</TD><TD ALIGN=RIGHT>  1482</TD><TD ALIGN=RIGHT>  82.333</TD></TR>
+<TD>Information Flow measure ( &nbsp;inclusive&nbsp;)</TD><TD>IF4</TD><TD ALIGN=RIGHT>  1763</TD><TD ALIGN=RIGHT>  97.944</TD></TR>
 <TR>
-<TD>Information Flow measure ( &nbsp;visible&nbsp;)</TD><TD>IF4v</TD><TD ALIGN=RIGHT>   742</TD><TD ALIGN=RIGHT>  41.222</TD></TR>
+<TD>Information Flow measure ( &nbsp;visible&nbsp;)</TD><TD>IF4v</TD><TD ALIGN=RIGHT>  1015</TD><TD ALIGN=RIGHT>  56.389</TD></TR>
 <TR>
 <TD>Information Flow measure ( &nbsp;concrete&nbsp;)</TD><TD>IF4c</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>   0.056</TD></TR>
 <TR>
@@ -94,35 +94,35 @@ The label cell for each row in this table provides a link to the functions table
 <TR>
 <TD><A HREF="Admin.html#procdet">
 Admin</A>
-</TD><TD ALIGN=RIGHT>   383</TD><TD ALIGN=RIGHT>    84</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>47.875</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>10.500</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT>   383</TD><TD ALIGN=RIGHT>    84</TD><TD ALIGN=RIGHT>    67</TD><TD ALIGN=RIGHT> 5.716</TD><TD ALIGN=RIGHT> 1.254</TD></TR>
 <TR>
 <TD><A HREF="Complaint.html#procdet">
 Complaint</A>
-</TD><TD ALIGN=RIGHT>   180</TD><TD ALIGN=RIGHT>    28</TD><TD ALIGN=RIGHT>     9</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>20.000</EM></TD><TD ALIGN=RIGHT> 3.111</TD></TR>
+</TD><TD ALIGN=RIGHT>   168</TD><TD ALIGN=RIGHT>    28</TD><TD ALIGN=RIGHT>    30</TD><TD ALIGN=RIGHT> 5.600</TD><TD ALIGN=RIGHT> 0.933</TD></TR>
 <TR>
 <TD><A HREF="Date.html#procdet">
 Date</A>
-</TD><TD ALIGN=RIGHT>    54</TD><TD ALIGN=RIGHT>    21</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT>    54</TD><TD ALIGN=RIGHT>    21</TD><TD ALIGN=RIGHT>    14</TD><TD ALIGN=RIGHT> 3.857</TD><TD ALIGN=RIGHT> 1.500</TD></TR>
 <TR>
 <TD><A HREF="Department.html#procdet">
 Department</A>
-</TD><TD ALIGN=RIGHT>   178</TD><TD ALIGN=RIGHT>    44</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT>   166</TD><TD ALIGN=RIGHT>    44</TD><TD ALIGN=RIGHT>    27</TD><TD ALIGN=RIGHT> 6.148</TD><TD ALIGN=RIGHT> 1.630</TD></TR>
 <TR>
 <TD><A HREF="Director.html#procdet">
 Director</A>
-</TD><TD ALIGN=RIGHT>   146</TD><TD ALIGN=RIGHT>    34</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT>   146</TD><TD ALIGN=RIGHT>    34</TD><TD ALIGN=RIGHT>    28</TD><TD ALIGN=RIGHT> 5.214</TD><TD ALIGN=RIGHT> 1.214</TD></TR>
 <TR>
 <TD><A HREF="Employee.html#procdet">
 Employee</A>
-</TD><TD ALIGN=RIGHT>   231</TD><TD ALIGN=RIGHT>    36</TD><TD ALIGN=RIGHT>    10</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>23.100</EM></TD><TD ALIGN=RIGHT> 3.600</TD></TR>
+</TD><TD ALIGN=RIGHT>   232</TD><TD ALIGN=RIGHT>    37</TD><TD ALIGN=RIGHT>    54</TD><TD ALIGN=RIGHT> 4.296</TD><TD ALIGN=RIGHT> 0.685</TD></TR>
 <TR>
 <TD><A HREF="Job.html#procdet">
 Job</A>
-</TD><TD ALIGN=RIGHT>   129</TD><TD ALIGN=RIGHT>    18</TD><TD ALIGN=RIGHT>     9</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>14.333</EM></TD><TD ALIGN=RIGHT> 2.000</TD></TR>
+</TD><TD ALIGN=RIGHT>   160</TD><TD ALIGN=RIGHT>    26</TD><TD ALIGN=RIGHT>    20</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM> 8.000</EM></TD><TD ALIGN=RIGHT> 1.300</TD></TR>
 <TR>
 <TD><A HREF="Manager.html#procdet">
 Manager</A>
-</TD><TD ALIGN=RIGHT>   296</TD><TD ALIGN=RIGHT>    68</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>37.000</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM> 8.500</EM></TD></TR>
+</TD><TD ALIGN=RIGHT>   294</TD><TD ALIGN=RIGHT>    68</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>42.000</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM> 9.714</EM></TD></TR>
 <TR>
 <TD><A HREF="Manages.html#procdet">
 Manages</A>
@@ -150,7 +150,7 @@ WorksIn</A>
 <TR>
 <TD><A HREF="anonymous.html#procdet">
 anonymous</A>
-</TD><TD ALIGN=RIGHT>   166</TD><TD ALIGN=RIGHT>    43</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>55.333</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>14.333</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT>   166</TD><TD ALIGN=RIGHT>    43</TD><TD ALIGN=RIGHT>    47</TD><TD ALIGN=RIGHT> 3.532</TD><TD ALIGN=RIGHT> 0.915</TD></TR>
 <TR>
 <TD><A HREF="bool.html#procdet">
 bool</A>
@@ -187,7 +187,7 @@ Admin</A>
 <TR>
 <TD><A HREF="Complaint.html#summary">
 Complaint</A>
-</TD><TD ALIGN=RIGHT>    16</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    13</EM></TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     8</TD></TR>
+</TD><TD ALIGN=RIGHT>    14</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    11</EM></TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     8</TD></TR>
 <TR>
 <TD><A HREF="Date.html#summary">
 Date</A>
@@ -203,15 +203,15 @@ Director</A>
 <TR>
 <TD><A HREF="Employee.html#summary">
 Employee</A>
-</TD><TD ALIGN=RIGHT>    17</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    13</EM></TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     9</TD></TR>
+</TD><TD ALIGN=RIGHT>    17</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    13</EM></TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>    10</TD></TR>
 <TR>
 <TD><A HREF="Job.html#summary">
 Job</A>
-</TD><TD ALIGN=RIGHT>    12</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    12</EM></TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     6</TD></TR>
+</TD><TD ALIGN=RIGHT>    13</TD><TD ALIGN=RIGHT>    10</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     7</TD></TR>
 <TR>
 <TD><A HREF="Manager.html#summary">
 Manager</A>
-</TD><TD ALIGN=RIGHT>    19</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    19</EM></TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     9</TD></TR>
+</TD><TD ALIGN=RIGHT>    16</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    12</EM></TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     9</TD></TR>
 <TR>
 <TD><A HREF="Manages.html#summary">
 Manages</A>
@@ -297,11 +297,11 @@ Director</A>
 <TR>
 <TD><A HREF="Employee.html#structdet">
 Employee</A>
-</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>     7</EM></TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>   196</STRONG></TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>   196</EM></TD></TR>
+</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>     7</EM></TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>   441</STRONG></TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>   441</EM></TD></TR>
 <TR>
 <TD><A HREF="Job.html#structdet">
 Job</A>
-</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    36</EM></TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>    64</TD></TR>
+</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    64</EM></TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>   100</TD></TR>
 <TR>
 <TD><A HREF="Manager.html#structdet">
 Manager</A>
